--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@relume_io/relume-tailwind": "^0.7.0",
+    "@relume_io/relume-ui": "^0.7.0",
     "gsap": "^3.12.5",
     "lenis": "^1.1.6",
-    "next": "14.2.4",
+    "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.12",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2"
   }
 }
