--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
     "@gsap/react": "^2.1.1",
     "@relume_io/relume-tailwind": "^0.7.0",
     "@relume_io/relume-ui": "^0.7.0",
+    "framer-motion": "^11.16.4",
     "gsap": "^3.12.5",
+    "i18next": "^24.2.1",
     "lenis": "^1.1.6",
     "next": "^14.2.18",
-    "react": "^18",
-    "react-dom": "^18",
-    "swiper": "^11.1.4"
+    "next-i18next": "^15.4.1",
+    "next-intl": "^3.26.3",
+    "react-i18next": "^15.4.0",
+    "swiper": "^11.1.4",
+    "swr": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
   }
 }
