--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.1",
     "@relume_io/relume-tailwind": "^0.7.0",
     "@relume_io/relume-ui": "^0.7.0",
+    "embla-carousel-autoplay": "^8.5.2",
     "framer-motion": "^11.16.4",
     "gsap": "^3.12.5",
     "i18next": "^24.2.1",
