--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/app/[locale]/_components/Footer/FooterBanner.js"
+  ],
   "exclude": ["node_modules"]
 }
