--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^14.2.18",
     "next-i18next": "^15.4.1",
     "next-intl": "^3.26.3",
+    "react-ga4": "^2.1.0",
     "react-i18next": "^15.4.0",
     "swiper": "^11.1.4",
     "swr": "^2.3.0"
